# NewsAskAI

./: README.md  makefile  pyproject.toml
.github/workflows/: main.yml
src/news_ask_ai/: __init__.py
src/news_ask_ai/ask/: news_ask_engine.py  news_ask_ui.py
src/news_ask_ai/datasets/: news_articles_dataset_example.json
src/news_ask_ai/llms/: DeepSeek_R1_service.py  base.py  phi35_service.py
src/news_ask_ai/services/: chroma_service.py  embedding_service.py  llm_completion_service.py  search_news_service.py
src/news_ask_ai/services/prompts/: news_rag_prompts.py
src/news_ask_ai/static/css/: styles.css
src/news_ask_ai/utils/: logger.py
