[project]
name = "news_ask_ai"
version = "0.1.0"
description = "NewsAskAI is an open-source project that scrapes the latest news and generates a list of the most relevant ones. It allow users to ask questions about the news"
authors = [{ name = "Doramas Baez Bernal", email = "doramas6@hotmail.com" }]
readme = "README.md"
keywords = ['Python', 'template', 'uv']
requires-python = ">=3.12.8"
dependencies = [
    "mypy>=1.14.1",
    "ruff>=0.8.6",
    "chromadb>=0.6.2",
    "sentence-transformers>=3.3.1"
]

[project.scripts]
"app" = "news_ask_ai:main"

[tool.mypy]
strict = true
ignore_missing_imports = false
allow_untyped_globals = false
allow_redefinition = true
check_untyped_defs = true
color_output = true
error_summary = true
warn_return_any = true
warn_no_return = true
pretty = true

[tool.ruff]
target-version = "py312" 
line-length = 120
indent-width = 4
fix = true

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
